@@ -4716,6 +4716,9 @@ main (int argc, char *argv[])
 
 	arg0 = g_strdup (argv[0]); 
 
+	g_set_prgname ("gnome-genius");
+	g_set_application_name (_("GNOME Genius"));
+
 	/* kind of a hack to find out if we are being run from the
 	 * directory we were built in */
 	file = g_get_current_dir ();
