@@ -1,3 +1,8 @@
+Thu Feb 19 23:19:37 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/genius.c, src/gnome-genius.c: set prgname and application_name
+	  for glib
+
 Thu Feb 19 20:33:26 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* ve/ve-miscui.[ch]: remove the option menu func since option menu is
